@startuml

title __REST-API's Class Diagram__\n

  namespace ru.training.karaf.rest {
    interface ru.training.karaf.rest.ClimateParameterRestService {
    }

    interface ru.training.karaf.rest.LocationRestService {
    }

    interface ru.training.karaf.rest.SensorRestService {
    }

    interface ru.training.karaf.rest.SensorTypeRestService {
    }

    interface ru.training.karaf.rest.UnitRestService {
    }

    interface ru.training.karaf.rest.UserRestService {
    }

    namespace dto {
      class ru.training.karaf.rest.dto.CapabilityDTO {
      }

      class ru.training.karaf.rest.dto.ClimateParameterDTO {
      }

      class ru.training.karaf.rest.dto.DTO {
      }

      class ru.training.karaf.rest.dto.EntityDTO {
      }

      class ru.training.karaf.rest.dto.LocationDTO {
      }

      class ru.training.karaf.rest.dto.SensorDTO {
      }

      class ru.training.karaf.rest.dto.SensorTypeDTO {
      }

      class ru.training.karaf.rest.dto.UnitDTO {
      }

      class ru.training.karaf.rest.dto.UserDTO {
      }
    }
  }


  namespace ru.training.karaf.rest {
    namespace serializer {
      class ru.training.karaf.rest.serializer.SetOfEntSerializer {
      }
    }
  }


  namespace ru.training.karaf.rest {
    namespace validation {
      interface ru.training.karaf.rest.validation.UniqueKey {
      }

      class ru.training.karaf.rest.validation.UniqueKeyValidatorImpl {
      }
    }
  }


  ru.training.karaf.rest.dto.CapabilityDTO .up.|> ru.training.karaf.model.Capability
  ru.training.karaf.rest.dto.ClimateParameterDTO .up.|> ru.training.karaf.model.ClimateParameter
  ru.training.karaf.rest.dto.DTO o-- T : value
  ru.training.karaf.rest.dto.EntityDTO .up.|> ru.training.karaf.model.Entity
  ru.training.karaf.rest.dto.LocationDTO .up.|> ru.training.karaf.model.Location
  ru.training.karaf.rest.dto.SensorDTO .up.|> ru.training.karaf.model.Sensor
  ru.training.karaf.rest.dto.SensorDTO -up-|> ru.training.karaf.rest.dto.EntityDTO
  ru.training.karaf.rest.dto.SensorDTO o-- ru.training.karaf.rest.dto.LocationDTO : location
  ru.training.karaf.rest.dto.SensorDTO o-- ru.training.karaf.rest.dto.SensorTypeDTO : type
  ru.training.karaf.rest.dto.SensorTypeDTO .up.|> ru.training.karaf.model.SensorType
  ru.training.karaf.rest.dto.SensorTypeDTO -up-|> ru.training.karaf.rest.dto.EntityDTO
  ru.training.karaf.rest.dto.SensorTypeDTO o-- ru.training.karaf.rest.dto.CapabilityDTO : capability
  ru.training.karaf.rest.dto.UnitDTO .up.|> ru.training.karaf.model.Unit
  ru.training.karaf.rest.dto.UserDTO .up.|> ru.training.karaf.model.UniqueFieldEntity
  ru.training.karaf.rest.dto.UserDTO .up.|> ru.training.karaf.model.User
  ru.training.karaf.rest.serializer.SetOfEntSerializer -up-|> com.fasterxml.jackson.databind.ser.std.StdSerializer
  ru.training.karaf.rest.validation.UniqueKeyValidatorImpl .up.|> javax.validation.ConstraintValidator
  ru.training.karaf.rest.validation.UniqueKeyValidatorImpl o-- ru.training.karaf.repo.UniqueValidationRepo : repo
  ru.training.karaf.rest.validation.UniqueKeyValidatorImpl o-- ru.training.karaf.rest.validation.UniqueKey : uniqueKey


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
